<!--
  ~ Copyright (C) 2015 Baidu, Inc. All Rights Reserved.
  -->
<resources>
    <string name="app_name">NiceFileExplore</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_back">Back</string>
    <string name="image">图片</string>
    <string name="category_pic">图片</string>
    <string name="category_video">视频</string>
    <string name="category_doc">文档</string>
    <string name="category_music">音乐</string>
    <string name="category_apk">安装包</string>
    <string name="category_zip">压缩包</string>
    <string name="category_fav">收藏</string>
    <string name="category_bluetooth">蓝牙</string>
    <string name="file_tree">文件目录</string>
    <string name="safebox">保险柜</string>
    <string name="tags">自定义标签</string>
    <string name="dialog_select_type">请选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图片</string>
    <string name="category_all">全部</string>
</resources>
